--- a/ConsoleApp.PoC/ConsoleApp.PoC.csproj
+++ b/ConsoleApp.PoC/ConsoleApp.PoC.csproj
@@ -8,14 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Compliance\" />
-    <Folder Include="Monitoring\" />
-    <Folder Include="Utility\" />
-    <Folder Include="Strategy\" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
